--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.o
 *.so
 *.pyc
- 
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -20,13 +20,13 @@
 *.rar
 *.tar
 *.zip
- 
+
 # Logs and databases #
 ######################
 *.log
 *.db
 *.pdb
- 
+
 # OS generated files #
 ######################
 .DS_Store
@@ -62,3 +62,6 @@ Thumbs.db
 *.png
 *.bmp
 *.gif
+
+# Misc #
+*.txt
